feat: update and sort order chapter